Thu Nov 19 21:55:11 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_start): force to invoke GC by GC.start
	  even if it is GC.disable'd.

	* test/ruby/test_gc.rb: add a test.

Thu Nov 19 20:08:59 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c: trivial performance improvements.

	    name    modified
	    vm1_gc_short_lived*                1.015
	    vm1_gc_short_with_complex_long*    1.014
	    vm1_gc_short_with_long*            1.000
	    vm1_gc_short_with_symbol*          1.016
	    vm1_gc_wb_ary*                     1.002
	    vm1_gc_wb_ary_promoted*            0.996
	    vm1_gc_wb_obj*                     1.045
	    vm1_gc_wb_obj_promoted*            1.014
	    vm3_gc                             1.021

	* gc.c (gc_writebarrier_generational): reorder parameters to optimize
	  register passing function call.

	* gc.c (gc_writebarrier_incremental): ditto.

	* gc.c (rb_gc_writebarrier): remove LIKELY().
	  LIKELY() seems to move related functions not better places.

Thu Nov 19 19:45:05 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_prog_init): [DOC] ARGV does not contain the name of
	  the executable.  [ruby-core:71561] [Bug #11711]

Thu Nov 19 15:53:21 2015  Koichi Sasada  <ko1@atdot.net>

	* signal.c: should also clear ruby_disable_gc.
	  [Bug #11692]

Thu Nov 19 15:31:45 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): T_IMEMO/iseq objects should be
	  wrap with ISeq wrappers. [Bug #11676]

Thu Nov 19 15:16:12 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems: Update to RubyGems 2.5.0+ HEAD(c6b4946).
	  this version includes #1114, #1314, #1322, #1375, #1383, #1387
	* test/rubygems: ditto.

Thu Nov 19 14:14:37 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (finish_overlapped_socket): return value of this
	  function should be only 0 or SOCKET_ERROR.

Thu Nov 19 14:12:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_tailcall_optimize): apply tail call optimization